Bye configuratie en start van Menubar met config,
In code optie om bye in bepaalde groepen it te sluiten.